# polanki

./: Makefile  README.md  environment.yml  pyproject.toml  requirements.txt
scripts/: ingestion.py  mistral.py
src/polanki/: __init__.py  enums.py  llm.py  llm_prompts.py
src/polanki.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
tests/: __init__.py
